Create Live Atom & Edit Comments.html

--- a/comments.html
+++ b/comments.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
   <title>Comments</title>
   <link rel="stylesheet" type="text/css" href="./stylesheet.css">
   <style>
@@ -28,7 +29,7 @@
       </div>
     </div>
     <div id="input">
-      <textarea id="text" rows="4" cols="50"></textarea>
+      <textarea id="text" placeholder="Add comment here" rows="4" cols="50" ></textarea>
       <input id="email" placeholder="Your email here"/>
       <input id="submit" type="button" value="Submit" />
     </div>
