--- a/Find A League Near You.html
+++ b/Find A League Near You.html
@@ -16,9 +16,9 @@
 </div>
 
   <ul class="nav">
-    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="./notable_players.html">Notable Players</a></li>
-    <li><a href="./find a league near you.html">Find A League</a></li>
+    <li><a class="active" href="./find a league near you.html">Find A League</a></li>
     <li><a href="./comments.html">Comments</a></li>
   </ul>
 
