--- a/notable_players.html
+++ b/notable_players.html
@@ -18,8 +18,8 @@
 </div>
 
 <ul class="nav">
-  <li><a class="active" href="./index.html">Home</a></li>
-  <li><a href="./notable_players.html">Notable Players</a></li>
+  <li><a href="./index.html">Home</a></li>
+  <li><a class="active" href="./notable_players.html">Notable Players</a></li>
   <li><a href="./find a league near you.html">Find A League</a></li>
   <li><a href="./comments.html">Comments</a></li>
 </ul>
