Update the title of shop.html

--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Racquetball</title>
+  <title>Racquetball-shop</title>
   <link rel="stylesheet" type="text/css" href="./stylesheet.css">
   <style>
   body { background-image: url("https://static1.squarespace.com/static/5511fc7ce4b0a3782aa9418b/t/552ef12ee4b0e9ead81ceefd/1429139759978/learning-the-grid-method.jpg?format=1000w");
@@ -22,3 +22,4 @@
   <li><a href=".shop.html">Shop</a><li>
   <li><a href="./comments.html">Comments</a></li>
 </ul>
+</body>
