correct errors in shop.html and navigation bars

--- a/comments.html
+++ b/comments.html
@@ -16,7 +16,7 @@
     <li><a href="./index.html">Home</a></li>
     <li><a href="./notable_players.html">Notable Players</a></li>
     <li><a href="./find a league near you.html">Find A League</a></li>
-    <li><a href=".shop.html">Shop</a><li>
+    <li><a href="./shop.html">Shop</a><li>
     <li><a class="active" href="./comments.html">Comments</a></li>
   </ul>
 
