--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Racquetball-shop</title>
+  <title>Racquetball-Shop</title>
   <link rel="stylesheet" type="text/css" href="./stylesheet.css">
   <style>
   body { background-image: url("https://static1.squarespace.com/static/5511fc7ce4b0a3782aa9418b/t/552ef12ee4b0e9ead81ceefd/1429139759978/learning-the-grid-method.jpg?format=1000w");
@@ -13,13 +13,16 @@
 <body>
   <div class="borderbox1">
   <h2><center>Shop</center></h2>
+  <h4><center>Buy the top rated raquetball products here</center></h4>
+
 </div>
 
 <ul class="nav">
   <li><a href="./index.html">Home</a></li>
-  <li><a class="active" href="./notable_players.html">Notable Players</a></li>
+  <li><a href="./notable_players.html">Notable Players</a></li>
   <li><a href="./find a league near you.html">Find A League</a></li>
-  <li><a href=".shop.html">Shop</a><li>
+  <li><a class="active" href="./shop.html">Shop</a><li>
   <li><a href="./comments.html">Comments</a></li>
 </ul>
 </body>
+</html>
