add new shopping images and links. Fix image in Notable_Players

--- a/shop.html
+++ b/shop.html
@@ -5,15 +5,18 @@
   <title>Racquetball-Shop</title>
   <link rel="stylesheet" type="text/css" href="./stylesheet.css">
   <style>
-  body { background-image: url("https://static1.squarespace.com/static/5511fc7ce4b0a3782aa9418b/t/552ef12ee4b0e9ead81ceefd/1429139759978/learning-the-grid-method.jpg?format=1000w");
+
+    body { background-image: url("https://static1.squarespace.com/static/5511fc7ce4b0a3782aa9418b/t/552ef12ee4b0e9ead81ceefd/1429139759978/learning-the-grid-method.jpg?format=1000w");
+
   }
+
+
   </style>
 </head>
 
 <body>
   <div class="borderbox1">
-  <h2><center>Shop</center></h2>
-  <h4><center>Buy the top rated raquetball products here</center></h4>
+  <h2><center>Racquetball Shop</center></h2>
 
 </div>
 
@@ -24,5 +27,25 @@
   <li><a class="active" href="./shop.html">Shop</a><li>
   <li><a href="./comments.html">Comments</a></li>
 </ul>
+
+<br>
+</br>
+  <table align=center>
+    <tr>
+      <th colspan="4">Buy the top rated raquetball products here</th>
+    </tr>
+    <tr>
+      <td><a href= "https://www.amazon.com/gp/product/B071JZVVH6/ref=s9_acsd_top_hd_bw_bELdH_c_x_1_w?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-4&pf_rd_r=QKJ9B11WER0JF0WRZAV8&pf_rd_t=101&pf_rd_p=fb0341d7-f5d0-5f9f-a6fc-c4196b51776e&pf_rd_i=3419751" target="_blank"><img width="200" src="https://images-na.ssl-images-amazon.com/images/I/816QSRA3zbL._SY879_.jpg"></a></td>
+      <td><a href= "https://www.amazon.com/Deluxe-Ultimate-Racquetball-Starter-Value/dp/B06WRNS947/ref=sr_1_73_sspa?s=racquet-sports&ie=UTF8&qid=1534385003&sr=1-73-spons&psc=1"target="_blank"><img width="200"src="https://images-na.ssl-images-amazon.com/images/I/71kroMFEMxL._SX679_.jpg"></a></td>
+      <td><a href="https://www.amazon.com/Ektelon-Premium-Select-Racquetball-12-balls/dp/B00L9ECPD6/ref=sr_1_78?s=racquet-sports&ie=UTF8&qid=1534385023&sr=1-78"target="_blank"><img width="200"src="https://images-na.ssl-images-amazon.com/images/I/91kmGjs%2BuVL._SY879_.jpg"></a></td>
+      <td><a href="https://www.amazon.com/PURPLE-PRO-PENN-RACQUETBALL-case/dp/B00ZHAKNSW/ref=sr_1_95?s=racquet-sports&ie=UTF8&qid=1534385023&sr=1-95"target="_blank"><img width="200" src="https://images-na.ssl-images-amazon.com/images/I/515TmNZnGQL._PIcountsize-24,TopRight,0,0_SX364SY500SH20_.jpg"></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://www.amazon.com/gp/product/B07F7GK27X/ref=s9_acsd_newrz_hd_bw_bEnpp_c_x_w?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-6&pf_rd_r=T6VVFJ1T8W2XEEZFKZYM&pf_rd_t=101&pf_rd_p=0e38fa47-4662-541e-9d9f-25205fc76560&pf_rd_i=3528161"target="_blank"><img width="200" src="https://images-na.ssl-images-amazon.com/images/I/41TIjfqVCyL.jpg"></a></td>
+      <td><a href="https://www.amazon.com/gp/product/B07D6NCQKQ/ref=s9_acsd_newrz_hd_bw_bEnpp_c_x_w?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-6&pf_rd_r=T6VVFJ1T8W2XEEZFKZYM&pf_rd_t=101&pf_rd_p=0e38fa47-4662-541e-9d9f-25205fc76560&pf_rd_i=3528161"target="_blank"><img width="200" src="https://images-na.ssl-images-amazon.com/images/I/51zUVXeTS2L.jpg"></a></td>
+      <td><a href="https://www.amazon.com/gp/product/B002LG5HH2/ref=s9_acsd_top_hd_bw_bEnpp_c_x_1_w?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-4&pf_rd_r=T6VVFJ1T8W2XEEZFKZYM&pf_rd_t=101&pf_rd_p=0e38fa47-4662-541e-9d9f-25205fc76560&pf_rd_i=3528161"target="_blank"><img width="200" src="https://images-na.ssl-images-amazon.com/images/I/41Nl3zhzRnL.jpg"></a></td>
+      <td><a href="https://www.amazon.com/Python-Super-Racquetball-Glove-Right/dp/B00X5W427W/ref=sr_1_38?s=racquet-sports&ie=UTF8&qid=1534384684&sr=1-38"><img width="200" src="https://images-na.ssl-images-amazon.com/images/I/81b0GrkTcTL._SY879_.jpg"target="_blank"></a></td>
+    </tr>
+  </table>
 </body>
 </html>
